@startuml
 'https://plantuml.com/class-diagram

 hide circle
 skinparam classAttributeIconSize 0


 class Bootstrapper{
 Plan px = new Plan(planType, numMinutes, maxDevices, musicCollections, musicSuggestions, monthlyFee, annualFee,planState, planPromote, htmlDescription )
    }



 class Plan {
     -nMins
              -maxDevices
              -musicCollections
              -musicSuggestions
              -monthlyFee
              -annualFee
              -planState
              -planType
              -activeSubs
              -HTMLdescription
     Product(Integer maxDevices, Integer musicCollections, String musicSuggestions , Integer monthlyFee, Integer planState, String planType, String HTMLdescription, Integer activeSubs)
 }

 class PlanRepository {
     +save(Plan newPlanType) : PlanType
     +searchByPlanType(@Param("planType") String planType);
     +deleteByIdIfMatch(String planType, long desiredVersion);
 }

 PlanRepository "1" --> "0.." Plan:  records

Bootstrapper ..> PlanRepository




 @enduml